chores(deps): upgrade to Java 21 (#45)
Closes: FDIS-33