@@ -3,7 +3,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>folio-di-support</artifactId>
-  <version>2.3.0-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>folio-di-support</name>
   <organization>
@@ -19,8 +19,8 @@
   </licenses>
 
   <properties>
-    <vertx.version>4.5.11</vertx.version>
-    <spring.version>6.2.2</spring.version>
+    <vertx.version>4.5.13</vertx.version>
+    <spring.version>6.2.3</spring.version>
     <lombok.version>1.18.36</lombok.version>
     <log4j.version>2.24.3</log4j.version>
 
@@ -133,7 +133,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <release>17</release>
+          <release>21</release>
+          <compilerArgument>-proc:full</compilerArgument>
         </configuration>
       </plugin>
 
